# NoLIE

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GETTING_STARTED.md  INSTALL_NODEJS.md  LICENSE  Makefile  README.md  START_HERE.md  docker-compose.yml  environment.yml  fix-dependencies.bat  fix_nodejs.bat  install-web.bat  install_nodejs_complete.bat  install_nodejs_fix.bat  pyproject.toml  requirements.txt  simple_api.py  start.bat  start.py  start.sh  start_enhanced.bat  start_enhanced.py  start_nolie.bat  start_nolie.py  start_nolie_full.bat  start_nolie_full.py  start_nolie_simple.bat  start_nolie_simple.py  start_ultimate.bat  test_api.py  test_ultimate.py  ultimate_detector.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
configs/: default.yaml  infer.yaml  train_small.yaml
deepfake_forensics/: __init__.py  cli.py
deepfake_forensics/api/: __init__.py  schemas.py  server.py
deepfake_forensics/data/: __init__.py  datasets.py  samplers.py  transforms.py  video_reader.py
deepfake_forensics/explain/: __init__.py  attribution.py  gradcam.py
deepfake_forensics/inference/: __init__.py  models.py  predictor.py
deepfake_forensics/models/: __init__.py  audio_visual.py  heads.py  resnet_freq.py  vit.py  xception.py
deepfake_forensics/robustness/: __init__.py
deepfake_forensics/training/: __init__.py  export.py  infer.py  module.py  train.py
deepfake_forensics/utils/: __init__.py  av_sync.py  fft_features.py  io.py  logging.py  metrics.py  seeds.py
docker/: compose.yaml
notebooks/: eda.ipynb
scripts/: prepare_data.py
tests/: __init__.py  test_models.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  setup.bat  setup.sh  vite.config.ts
web/src/: App.tsx
web/src/components/: ErrorBanner.tsx  FileDropzone.tsx  Footer.tsx  HeatmapGallery.tsx  LanguageSwitch.tsx  Navbar.tsx  ResultCard.tsx  ScoreBadge.tsx  ThemeToggle.tsx  UploadItem.tsx  VideoTimeline.tsx
web/src/pages/: About.tsx  Home.tsx  Results.tsx  Settings.tsx
web/src/store/: settings.ts  uploads.ts
web/src/styles/: globals.css
web/src/test/: FileDropzone.test.tsx  ScoreBadge.test.tsx  api.test.ts
